@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Show users&apos; full names in share dialogs.
 * [mjr] Remove maps configuration, replaced by global maps configuration (Bug #14168).
 * [jan] Keep original file names when PUTing images via WebDAV.
 * [jan] Return ETags with browse() API method.
@@ -53,7 +54,7 @@
     <file name="ansel-garbage-collection" role="script">
      <tasks:replace from="/usr/bin/env php" to="php_bin" type="pear-config" />
     </file>
-    <file name="AnselPublish.scpt" role="script"/>
+    <file name="AnselPublish.scpt" role="script" />
    </dir> <!-- /bin -->
    <dir name="config">
     <file name=".htaccess" role="horde" />
@@ -631,7 +632,7 @@
    <package>
     <name>Horde_Core</name>
     <channel>pear.horde.org</channel>
-    <min>2.6.1</min>
+    <min>2.23.0</min>
     <max>3.0.0alpha1</max>
     <exclude>3.0.0alpha1</exclude>
    </package>
