@@ -2,6 +2,7 @@
 v3.1.0-git
 ----------
 
+[jan] Show users' full names in share dialogs.
 [mjr] Remove maps configuration, replaced by global maps configuration (Bug
       #14168).
 [jan] Keep original file names when PUTing images via WebDAV.
